# seuil-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  playground.yml  publish.yml  vopr.yml
chaos/: Cargo.toml
chaos/src/: lib.rs
crates/seuil/: Cargo.toml  README.md
crates/seuil/benches/: eval_bench.rs
crates/seuil/examples/: basic.rs  dental_edi.rs
crates/seuil/src/: clock.rs  datetime.rs  errors.rs  lib.rs
crates/seuil/src/evaluator/: engine.rs  mod.rs  scope.rs
crates/seuil/src/evaluator/functions/: array.rs  datetime.rs  hof.rs  mod.rs  numeric.rs  object.rs  string.rs  type_ops.rs
crates/seuil/src/evaluator/value/: impls.rs  iterator.rs  mod.rs  range.rs  serialize.rs
crates/seuil/src/parser/: ast.rs  mod.rs  pratt.rs  process.rs  tokenizer.rs
crates/seuil/tests/: official_suite.rs  properties.rs
docs/: book.toml
docs/src/: SUMMARY.md  comparison.md  contributing.md  getting-started.md  installation.md  introduction.md  quick-start.md
docs/src/api/: README.md  deterministic.md  errors.md  eval-config.md  seuil.md
docs/src/architecture/: README.md  arena.md  evaluator.md  parser.md  testing.md
docs/src/language/: README.md  conditionals.md  functions.md  higher-order.md  lambdas.md  operators.md  paths.md  transforms.md
fuzz/: Cargo.toml  jsonata.dict
fuzz/corpus/parse/: arithmetic  array_index  fn_chain  function_def  object_ctor  predicate  sort_expr  string_concat
fuzz/fuzz_targets/: eval.rs  parse.rs
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
playground/web/: index.html
vopr/: Cargo.toml
vopr/src/: lib.rs
