[workspace]
resolver = "2"
members = [
    "crates/seuil",
    "vopr",
    "chaos",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Zuub"]
repository = "https://github.com/zuub/seuil-rs"

[workspace.dependencies]
bumpalo = { version = "3.16", features = ["collections", "boxed", "allocator-api2"] }
hashbrown = "0.15"
serde_json = "1.0"
chrono = "0.4"
regress = "0.10"
base64 = "0.22"
bitflags = "2.5"
dtoa = "1.0"
num-format = "0.4"
rand = "0.9"
uuid = { version = "1.8", features = ["fast-rng", "v4", "v7"] }
indexmap = "2"
