[package]
name = "seuil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
seuil = { path = "../crates/seuil" }
bumpalo = "3.16"
serde_json = "1.0"

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_eval"
path = "fuzz_targets/eval.rs"
test = false
doc = false
