[package]
name = "seuil"
version = "0.1.0"
description = "A complete, safe JSONata implementation in Rust — JSON query, transform, and expression evaluation"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["jsonata", "json", "query", "transform", "edi"]
categories = ["parser-implementations", "encoding", "data-structures", "compilers"]
documentation = "https://docs.rs/seuil"
rust-version = "1.77.0"

[dependencies]
bumpalo = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regress = { workspace = true }
base64 = { workspace = true }
bitflags = { workspace = true }
dtoa = { workspace = true }
num-format = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1"
serde_json = { workspace = true }
glob = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
bumpalo = { workspace = true }

[[bench]]
name = "eval_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
