[package]
name = "seuil-playground-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seuil = { path = "../../crates/seuil" }
wasm-bindgen = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.8", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
